<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/homedomain"
		android:id="@+id/textView"
		android:layout_gravity="left|center_vertical"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/homeDomain"
		android:layout_gravity="center"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/destinationdomain"
		android:id="@+id/textView"
		android:layout_gravity="left|center_vertical"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/destDomain"
		android:layout_gravity="left|center_vertical"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/justification"
		android:id="@+id/textView"
		android:layout_gravity="left|center_vertical"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/justification"
		android:layout_gravity="left|center_vertical"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/newreservation"
		android:id="@+id/newReservation"
		android:layout_gravity="center"/>
</LinearLayout>