<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/header" android:layout_gravity="center" android:text="@string/aboutTitle"
            android:textSize="15px" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:layout_gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_1"
                android:id="@+id/info_1" android:layout_gravity="center" android:layout_marginTop="15px"
                android:layout_marginBottom="15px" android:layout_marginLeft="5px" android:layout_marginRight="5px"
                android:gravity="center"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/geant_logo" android:layout_gravity="center" android:src="@drawable/geant"
                android:clickable="true" android:layout_margin="10px"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView" android:layout_gravity="center"
                android:src="@drawable/DANTE" android:layout_margin="10px"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1" android:layout_gravity="center" android:src="@drawable/EU"
                android:layout_margin="5px"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_2"
                android:id="@+id/info_2" android:layout_gravity="center" android:layout_marginLeft="5px"
                android:layout_marginTop="10px" android:layout_marginRight="5px" android:layout_marginBottom="10px"
                android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_3"
                android:id="@+id/info_3" android:layout_gravity="center" android:gravity="center"/>
    </LinearLayout>
</LinearLayout>